--- a/index.html
+++ b/index.html
@@ -5,34 +5,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wferr</title>
-    <meta name="description" content="Wferr" />
+    <title>Million Digits</title>
+    <meta name="description" content="The first million digits of the most common math expressions." />
     <meta name="keywords" content="links, about, email" />
-    <meta name="author" content="Wferr" />
+    <meta name="author" content="Spencer Klawans" />
     <link rel="stylesheet" type="text/css" href="/resources/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="/resources/css/component.css" />
     <link href="/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!--[if IE]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-    <meta name="google-site-verification" content="mDja7GajdSM5h1RurIW3-K3kMfRvAtWyfct7VsPgtdY" />
-    <!--Favicon stuff o,o -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/resources/img/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/resources/img/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/resources/img/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/resources/img/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/resources/img/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/resources/img/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/resources/img/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/resources/img/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/resources/img/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/resources/img/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/resources/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/resources/img/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/resources/img/favicon/favicon-16x16.png">
+
     <link rel="manifest" href="/resources/img/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/resources/img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
 </head>
@@ -55,14 +37,13 @@
 					<a href=""> &pi;</a>
 					<a href=""> &phi;</a>
                     <br>
-                    <a href="http://github.com/milliondigits"><h3><i class="fa fa-github"></i></h3></a>
+                    <a href="http://github.com/milliondigits/milliondigits.github.io"><h3><i class="fa fa-github"></i></h3></a>
                 </div>
             </div>
             <script src="/resources/js/TweenLite.min.js"></script>
             <script src="/resources/js/EasePack.min.js"></script>
             <!--<script src="js/animated.js"></script>-->
             <script src="/resources/js/dots.js"></script>
-
             <script src="/resources/js/rAF.js"></script>
            
         </body>
