--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 </head>
 
 <body>
-    <div class="container demo-1">
+    <div class="container">
         <div class="content">
             <div id="large-header" class="large-header">
 			<canvas id="demo-canvas"></canvas>
                 <h1 class="main-title">Million Digits of Everything
                     <br><br>
 					
-                    <a href=""> &radic;2</a>
+                    <a href="pi.html"> &radic;2</a>
 					<a href=""> &radic;3</a>
 					<a href=""> e</a>
 					<a href=""> &pi;</a>
