--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <h1 class="main-title">Million Digits of Everything
                     <br><br>
 					
-                    <a href="pi.html"> &radic;2</a>
+                    <a href=""> &radic;2</a>
 					<a href=""> &radic;3</a>
 					<a href=""> e</a>
-					<a href=""> &pi;</a>
+					<a href="pi.html"> &pi;</a>
 					<a href=""> &phi;</a>
                     <br>
                     <a href="http://github.com/milliondigits/milliondigits.github.io"><h3><i class="fa fa-github"></i></h3></a>
