Redid return to home pointers

--- a/e.html
+++ b/e.html
@@ -94,7 +94,7 @@
             <div class="large-header" id="large-header">
                 <h1 class="main-title">Million Digits of E</h1><br>
                 <br>
-                <a href="index.html"><i class="fa fa-home"></i></a>
+                <a href="/"><i class="fa fa-home"></i></a>
 				<a href="/resources/files/e.txt" download><i class="fa fa-cloud-download"></i></a>
                 <h1 class="main-body">
                 <p class="numbers">
