--- a/rt3.html
+++ b/rt3.html
@@ -94,7 +94,7 @@
             <div class="large-header" id="large-header">
                 <h1 class="main-title">Million Digits of &radic;3</h1><br>
                 <br>
-                <a href="index.html"><i class="fa fa-home"></i></a>
+                <a href="/"><i class="fa fa-home"></i></a>
 				<a href="/resources/files/rt3.txt" download><i class="fa fa-cloud-download"></i></a>
                 <h1 class="main-body">
                 <p class="numbers">
