--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Million Digits</title>
-    <meta name="description" content="The first million digits of the most common math expressions." />
+    <meta name="description" content="The first million digits of the most common math expressions.  Currently Pi, Phi, root 2, root 3, and e are on here!" />
     <meta name="keywords" content="links, about, email" />
     <meta name="author" content="Spencer Klawans" />
     <link rel="stylesheet" type="text/css" href="/resources/css/normalize.css" />
