--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 					<a href="e.html"> e</a>
 					<a href="pi.html"> &pi;</a>
 					<a href="gr.html"> &phi;</a>
-                    <br>
-                    <a href="http://github.com/milliondigits/milliondigits.github.io"><h3><i class="fa fa-github"></i></h3></a>
+                    <br><br>
+					<a> <i class="fa fa-search"></i></a>
+					<br><br>
+                    <a href="http://github.com/milliondigits/milliondigits.github.io"><h5><i class="fa fa-github"></i></h3></a>
                 </div>
             </div>
             <script src="/resources/js/TweenLite.min.js"></script>
