--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <br><br>
 					<a> <i class="fa fa-search"></i></a>
 					<br><br>
-					<a><h3><i class="fa fa-envelope-o"></i></a>
-                    <a href="http://github.com/milliondigits/milliondigits.github.io"><h5><i class="fa fa-github"></i></a>
-					<a><i class="fa fa-twitter"></i></h3></a>
+					<a><h5><i class="fa fa-envelope-o"></i></a>
+                    <a href="http://github.com/milliondigits/milliondigits.github.io"><i class="fa fa-github"></i></a>
+					<a><i class="fa fa-twitter"></i></h5></a>
                 </div>
             </div>
             <script src="/resources/js/TweenLite.min.js"></script>
