--- a/e.html
+++ b/e.html
@@ -50,6 +50,7 @@
     left: 50%;
     -webkit-transform: translate3d(-50%,-50%,0);
     transform: translate3d(-50%,-50%,0);
+    
     }
     .main-body {
     position: absolute;
@@ -66,7 +67,7 @@
 
     .container .main-title {
     text-transform: uppercase;
-    font-size: 4.2em;
+    font-size: 4.2vw;
     letter-spacing: 0.1em;
     }
 
