--- a/pi.html
+++ b/pi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Million Digits</title>
+    <title>Million Digits of pi</title>
     <meta content=
     "The first million digits of the most common math expressions." name=
     "description">
