Added the largest Prime known

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 					<a href="e.html"> e</a>
 					<a href="pi.html"> &pi;</a>
 					<a href="gr.html"> &phi;</a>
+					<a href="prime.html"> Prime</a>
                     <br><br>
 					<a> <i class="fa fa-search"></i></a>
 					<br><br>
